infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kitapkurdu-ingress
  namespace: kitapkurdu
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    # nginx.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    # nginx.ingress.kubernetes.io/ssl-redirect: '443'
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: letsencrypt-http # certbot sonrasinda-- cronjob ile yenilenmeli.
  labels:
    app: frontend
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kitapkurdu.alphaworld.ch 
      secretName: kitapkurdu-tls
  rules:
    - host: kitapkurdu.alphaworld.ch
      http:
        paths:
          - path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
            pathType: Prefix
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
